# truffle

./: .gitignore  Cargo.toml  README.md  benchmarks.nu  tests.nu
.github/workflows/: ci.yml
benches/: benchmarks.rs
benchmarks/: hot_loop.jl-jit  hot_loop.lua  hot_loop.rhai  hot_loop.truffle  hot_loop.truffle-jit  hot_loop_no_print.truffle  testme.lua  testme.python  testme.truffle
editors/vscode/: CHANGELOG.md  LICENSE.txt  README.md  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: truffle.tmLanguage.json  truffle.tmLanguage.yml
sample_projects/async_sample/: Cargo.toml
sample_projects/async_sample/scripts/: example.async.truffle
sample_projects/async_sample/src/: main.rs
sample_projects/cli/: Cargo.toml
sample_projects/cli/scripts/: use_print.cli.truffle
sample_projects/cli/src/: main.rs
sample_projects/truffle_overview/: Cargo.toml
sample_projects/truffle_overview/scripts/: example.overview.truffle
sample_projects/truffle_overview/src/: main.rs
samples/: add_int.truffle  float.truffle  print_env.truffle  print_int.truffle  testme_mini.truffle
src/: codegen.rs  codegen_cranelift.rs  delta.rs  errors.rs  eval.rs  lexer.rs  lib.rs  line_editor.rs  main.rs  parser.rs  parser_delta.rs  typechecker.rs
tests/: async.truffle  erasure.rs  main.rs  scripts.rs  strings.truffle  test_eval.rs
truffle/: Cargo.toml  benchmarks.nu  tests.nu
truffle-attributes/: Cargo.toml
truffle-attributes/src/: lib.rs
truffle-lsp/: Cargo.toml
truffle-lsp/samples/: add_int.repl.truffle
truffle-lsp/src/: main.rs  server.rs
truffle-lsp/src/server/: dispatch.rs
truffle/benches/: benchmarks.rs
truffle/benchmarks/: hot_loop.jl  hot_loop.js
truffle/docs/: getting_started.md  language.md  lsp.md
truffle/samples/: add_int.truffle  print_int2.truffle  simple_add_int.truffle
truffle/src/: codegen.rs  engine.rs  errors.rs  eval.rs  lexer.rs  lib.rs  main.rs  parser.rs  typechecker.rs
truffle/tests/: add_int.truffle  async.truffle  lsp_serialize.rs  main.rs  return_custom_type.truffle  scripts.rs  serialize.rs  test_eval.rs
