[package]
name = "truffle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
cranelift = { version = "0.95.0", optional = true }
cranelift-module = { version = "0.95.0", optional = true }
cranelift-jit = { version = "0.95.0", optional = true }
cranelift-native = { version = "0.95.0", optional = true }
reedline = { version = "0.18.0", features = ["bashisms"], optional = true}

[features]
cranelift = ["dep:cranelift", "dep:cranelift-module", "dep:cranelift-jit", "dep:cranelift-native"]