[package]
name = "truffle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
futures = {version = "0.3", optional = true}
reedline = { version = "0.21.0", features = ["bashisms"], optional = true}

[features]
async = ["dep:futures"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false