[package]
name = "truffle-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
lsp-server = "0.7.4"
lsp-types = "0.94.1"
serde = "1.0.189"
serde_json = "1.0.107"
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
truffle = { version = "0.1.0", path = "../truffle" }
